[package]
name = "roommd"
version = "0.4.0"
authors = ["Armin Schäfer"]
description = "Creating building (wiring) diagrams should be as easy as writing markdown."
repository = "https://github.com/772/roommd"
readme = "README.md"
license-file = "LICENSE"
edition = "2024"
categories = ["visualization"]
keywords = ["graphics"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy.git", rev = "66e82324120c0d73fc920b9f4c51ef8e9b17b556", features = ["free_cam"] }
web-sys = { version = "0.3.77", features = ["HtmlTextAreaElement"] }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[features]
dev = [
    "bevy/dynamic_linking",
]
