[package]
name = "roommd"
version = "0.6.0"
authors = ["Armin Schäfer"]
description = "Creating building (wiring) diagrams should be as easy as writing markdown."
repository = "https://github.com/772/roommd"
readme = "README.md"
license-file = "LICENSE"
edition = "2024"
categories = ["visualization"]
keywords = ["graphics"]

[dependencies]
bevy = { version = "0.19", default-features = false, features = ["3d", "ui", "free_camera"] }
web-sys = { version = "0.3", features = ["HtmlTextAreaElement"] }

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[features]
dev = [
    "bevy/dynamic_linking",
]
